--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/nunito": "^0.1.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "^3.0.4",
     "expo": "~39.0.2",
+    "expo-font": "~8.3.0",
+    "expo-linear-gradient": "~8.3.0",
     "expo-notifications": "~0.7.2",
     "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
